--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="icon" type="image/icon" href="favicon.ico">
+<link rel="icon" type="image/icon" href="{{ site.github.url }}/favicon.ico">
 {{ if page.title }}
 <title>{{ page.title }}</title>
 {{ end if }}
-<link rel="stylesheet" href="{{ site.url }}/css/syntax.css">
-<link rel="stylesheet" href="{{ site.url }}/css/main.css">
+<link rel="stylesheet" href="/css/syntax.css">
+<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 <body>
 
