--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,18 @@
 layout: default
 ---
 <article>
-<div class="heading">{{ page.title }}</div>
-<p class="meta"><a class="permalink" href="{{ site.baseurl }}{{ post.url }}">&#9679;</a> {{ page.date | date_to_string }}</p>
-{{ content }}
-{% include tags.html %}
+    <div class="heading">{{ page.title }}</div>
+    <p class="meta"><a class="permalink" href="{{ site.baseurl }}{{ post.url }}">&#9679;</a> {{ page.date | date_to_string }}</p>
+    {{ content }}
+    <br/>
+    {% include tags.html %}
+
+    <br/><br/><br/>
+
+    {% include social-sharing.html %}
+
+    <br/><hr/>
+    {% if site.disqus %}
+    {% include disqus.html %}
+    {% endif %}
 </article>
