--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
 }
 body {
     color: #141515;
-    font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-family:-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;
     text-rendering: optimizeLegibility;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
+    font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
     font-weight: 400;
     color: #315572;
 }
@@ -63,7 +63,7 @@ header h1 a:hover {
 }
 nav {
     font-weight: 200;
-    font-family: -apple-system, Roboto, Helvetica, Arial;
+    font-family: -apple-system, Helvetica, Arial;
     text-transform: uppercase;
     margin-left: -43px;
 	margin-bottom: -20px;
@@ -99,7 +99,7 @@ p em {
 }
 .meta {
     color: #666666;
-    font-family: -apple-system, "Roboto", Courier, mono;
+    font-family: -apple-system, Courier, mono;
     font-weight: 100;
     text-align: left;
     margin-bottom: 1em;
@@ -125,7 +125,7 @@ p {
 p strong {
     font-weight: 500;
     font-style: normal;
-    font-family: Roboto, Helvetica Neue, Helvetica, Arial, Sans-serif !important;
+    font-family: Helvetica Neue, Helvetica, Arial, Sans-serif !important;
 }
 article {
     margin-top: 32px;
@@ -143,7 +143,7 @@ article {
     margin-bottom: 5px;
 }
 .label a {
-    font: 75% -apple-system, Roboto, Helvetica Neue, Helvetica, "Open Sans", Arial, sans-serif;
+    font: 75% -apple-system, Helvetica Neue, Helvetica, "Open Sans", Arial, sans-serif;
     font-weight: 300 !important;
     color: #ffffff;
 }
@@ -276,7 +276,7 @@ code {
 }
 #archive li span,
 #tags li span {
-    font-family: Roboto, Helvetica Neue, Helvetica, Arial, Sans-serif !important;
+    font-family: Helvetica Neue, Helvetica, Arial, Sans-serif !important;
     font-weight: 300;
     color: #305471;
 }
