--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
     text-rendering: optimizeLegibility;
     overflow-y: scroll;
     overflow-x: hidden;
+    font-weight: 300;
 }
 #main h1,
 h2,
